--- a/polls/templates/header.html
+++ b/polls/templates/header.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">Poller</span>
+        <span class="navbar-brand mb-0 h1">The Consensus</span>
       </div>
     </nav>
   </body>
